Address first batch of review comments